# circt

docs/Dialects/MVL/: RationaleMVL.md
include/circt/: InitAllPasses.h
include/circt/Conversion/: AffineToLoopSchedule.h  CFToHandshake.h  ExportVerilog.h  FIRRTLToHW.h  HWToBTOR2.h  Passes.h  Passes.td  PrintsToArcEnvCalls.h
include/circt/Transforms/: Passes.h
integration_test/arcilator/JIT/: sim-triggered.mlir  simprintf.mlir
lib/CAPI/Conversion/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/AffineToLoopSchedule/: AffineToLoopSchedule.cpp
lib/Conversion/ArcToLLVM/: CMakeLists.txt  LowerArcToLLVM.cpp
lib/Conversion/CFToHandshake/: CFToHandshake.cpp
lib/Conversion/CalyxNative/: CalyxNative.cpp
lib/Conversion/CalyxToFSM/: CalyxToFSM.cpp  MaterializeFSM.cpp  RemoveGroupsFromFSM.cpp
lib/Conversion/CalyxToHW/: CalyxToHW.cpp
lib/Conversion/CombToArith/: CombToArith.cpp
lib/Conversion/ConvertToArcs/: ConvertToArcs.cpp
lib/Conversion/DCToHW/: DCToHW.cpp
lib/Conversion/ExportChiselInterface/: ExportChiselInterface.cpp
lib/Conversion/ExportVerilog/: ApplyLoweringOptions.cpp  (+4 more)
lib/Firtool/: CMakeLists.txt  Firtool.cpp
lib/Transforms/: FlattenMemRefs.cpp  InsertMergeBlocks.cpp  MapArithToComb.cpp  MaximizeSSA.cpp  PassDetail.h  StripDebugInfoWithPred.cpp
test/circt-reduce/: canonicalize-reduction.mlir
tools/arcilator/: CMakeLists.txt  arcilator-runtime.h  arcilator.cpp
tools/arcilator/jit-env/: CMakeLists.txt  arcilator-jit-env.h
tools/circt-opt/: CMakeLists.txt
tools/firtool/: CMakeLists.txt  firtool.cpp
(+257 files in other folders)
